# nanaimo

./: .gitignore  Cargo.toml  build_errors.txt  build_output.txt  design_paper.md  roadmap.md
src/: animations.rs  grabs.rs  main.rs  render.rs  state.rs
src/handlers/: compositor.rs  data_device.rs  layer_shell.rs  misc.rs  mod.rs  seat.rs  xdg_shell.rs
